@@ -22,14 +22,29 @@ public class RecommendationService {
     public List<Review> getRecommendationsFor(User user, int max) {
         List<String> favGenres = reviewRepo.findAllByUserAndRecommendTrue(user).stream()
                 .flatMap(r -> r.getBook().getGenres().stream())
-                .distinct().toList();
+                .distinct()
+                .collect(Collectors.toList());
 
-        return reviewRepo.findAllByRecommendTrueAndUserNot(user).stream()
-                .filter(r -> r.getBook().getGenres().stream().anyMatch(favGenres::contains))
-                .filter(r -> !journalRepo.existsByUserAndBook(user, r.getBook()))
-                .limit(max)
-                .toList();
+        List<Review> recommendations;
+
+        if (!favGenres.isEmpty()) {
+            recommendations = reviewRepo.findAllByRecommendTrueAndUserNot(user).stream()
+                    .filter(r -> r.getBook().getGenres().stream().anyMatch(favGenres::contains))
+                    .filter(r -> !journalRepo.existsByUserAndBook(user, r.getBook()))
+                    .limit(max)
+                    .toList();
+        } else {
+            // Si no hay géneros favoritos, recomendar por mejor puntuación
+            recommendations = reviewRepo.findAllByRecommendTrueAndUserNot(user).stream()
+                    .filter(r -> !journalRepo.existsByUserAndBook(user, r.getBook()))
+                    .sorted((a, b) -> Double.compare(b.getDecimalRating().doubleValue(), a.getDecimalRating().doubleValue()))
+                    .limit(max)
+                    .toList();
+        }
+
+        return recommendations;
     }
+
 
 }
 
